# googlepromptwars

./: .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
app/: assistant.py  main.py
app/static/: index.html
carbontrack/: .dockerignore  CONTRIBUTING.md  README.md  pyproject.toml
carbontrack/app/: calculator.py
carbontrack/app/static/: app.js  index.html  styles.css
carbontrack/tests/: test_calculator.py  test_main.py
services/: civic_service.py
stadiumpulse/: .env.example  README.md  app.js  index.html  styles.css  vercel.json
stadiumpulse/api/: __init__.py  concierge.py  decision_engine.py
stadiumpulse/tests/: test_concierge.py
static/: index.html
tests/: test_maps.py
voter-education-assistant/: main.py
voter-education-assistant/services/: maps_service.py
