[project]
name = "carbon-footprint-platform"
version = "0.1.0"
description = "A smart dynamic assistant for tracking and reducing carbon footprint."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "google-generativeai>=0.5.4",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
]
